--- a/Views/MainContactos.xaml
+++ b/Views/MainContactos.xaml
@@ -7,58 +7,55 @@
              BackgroundColor="White"
              Shell.NavBarIsVisible="False"
              >
-    <Grid ColumnDefinitions="*" RowDefinitions="auto,auto,*,auto">
-        <Border BackgroundColor="DarkSlateBlue" Margin="2" Padding="1" Stroke="#E3EBF4" HeightRequest="65" Grid.Row="0">
-            <Border.StrokeShape>
-                <RoundRectangle CornerRadius="40,40,40,40">
-                </RoundRectangle>
-            </Border.StrokeShape>
-            <Border BackgroundColor="White" Padding="0" Margin="2">
+    <FlexLayout Direction="Column">
+        <Grid ColumnDefinitions="*" RowDefinitions="auto,auto,*,auto">
+            <Border BackgroundColor="DarkSlateBlue" Margin="2" Padding="1" Stroke="#E3EBF4" HeightRequest="65" Grid.Row="0">
                 <Border.StrokeShape>
                     <RoundRectangle CornerRadius="40,40,40,40">
                     </RoundRectangle>
                 </Border.StrokeShape>
-                <Grid 
-                    ColumnDefinitions="*,auto" 
-                    RowDefinitions="*"
-                    ColumnSpacing="12"
-                    Padding="24"
-                    >
-                    <Entry
-                    BackgroundColor="White" 
-                    HeightRequest="40" 
-                    Placeholder="Buscar Contacto"
-                    Grid.Column="0"
-                    >
-                    </Entry>
-                    <Image 
-                        Source="lupa2.png"
-                        HeightRequest="25"
-                        WidthRequest="25"
-                        Aspect="AspectFill"
-                        Grid.Column="1"
-                        >
-                    </Image>
-                </Grid>
-            </Border>
-        </Border>
-        <Grid ColumnDefinitions="*,*" RowDefinitions="*" HeightRequest="60" ColumnSpacing="12" Padding="10" Grid.Row="1">
-            <Button Grid.Column="0"></Button>
-            <Button Grid.Column="1"></Button>
-        </Grid>
-        <CollectionView x:Name="CollectionViewContactos" x:DataType="model:Contacto" Grid.Row="2" SelectionMode="Single" SelectionChanged="CollectionViewContactos_SelectionChanged">
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <Grid ColumnDefinitions="auto,auto,auto,auto" RowDefinitions="*" Padding="4" Margin="20">
-                        <Image Source="lupa2" Grid.Column="0" HeightRequest="25" WidthRequest="25"></Image>
-                        <Label Text="{Binding Nombre}" Grid.Column="1" Grid.Row="0" FontSize="16" Padding="4"></Label>
-                        <Label Text="{Binding Apellido}" Grid.Column="2" Grid.Row="0" FontSize="16" Padding="4"></Label>
-                        <Label Text="{Binding Apodo}" Grid.Column="3" Grid.Row="0" Padding="4"></Label>
+                <Border BackgroundColor="White" Padding="0" Margin="2">
+                    <Border.StrokeShape>
+                        <RoundRectangle CornerRadius="40,40,40,40">
+                        </RoundRectangle>
+                    </Border.StrokeShape>
+                    <Grid ColumnDefinitions="*,auto" RowDefinitions="*" ColumnSpacing="12" Padding="24">
+                        <Entry
+                            BackgroundColor="White" 
+                            HeightRequest="40" 
+                            Placeholder="Buscar Contacto"
+                            Grid.Column="0"
+                            >
+                        </Entry>
+                        <Image 
+                            Source="lupa2.png"
+                            HeightRequest="25"
+                            WidthRequest="25"
+                            Aspect="AspectFill"
+                            Grid.Column="1"
+                            >
+                        </Image>
                     </Grid>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
-        <HorizontalStackLayout Grid.Row="3">
+                </Border>
+            </Border>
+            <Grid ColumnDefinitions="*,*" RowDefinitions="*" HeightRequest="60" ColumnSpacing="12" Padding="10" Grid.Row="1">
+                <Button Grid.Column="0" BackgroundColor="#512BD4" TextColor="White" Text="Organizar Por" FontSize="10"></Button>
+                <Button Grid.Column="1" BackgroundColor="#512bd4" TextColor="White" Text="Organizar Por" FontSize="10"></Button>
+            </Grid>
+            <CollectionView x:Name="CollectionViewContactos" x:DataType="model:Contacto" Grid.Row="2" SelectionMode="Single" SelectionChanged="CollectionViewContactos_SelectionChanged">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid ColumnDefinitions="auto,auto,auto,auto" RowDefinitions="*" Padding="4" Margin="20">
+                            <Image Source="lupa2" Grid.Column="0" HeightRequest="25" WidthRequest="25"></Image>
+                            <Label Text="{Binding Nombre}" Grid.Column="1" Grid.Row="0" FontSize="16" Padding="4" TextColor="Black"></Label>
+                            <Label Text="{Binding Apellido}" Grid.Column="2" Grid.Row="0" FontSize="16" Padding="4" TextColor="Black"></Label>
+                            <Label Text="{Binding Apodo}" Grid.Column="3" Grid.Row="0" FontSize="14" Padding="4" TextColor="Black"></Label>
+                        </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </Grid>
+        <HorizontalStackLayout Margin="8" HorizontalOptions="End" Spacing="12" VerticalOptions="End">
             <Button 
                 x:Name="btnAgregarContacto"
                 Text="+"
@@ -72,11 +69,9 @@
                 HeightRequest="65"
                 WidthRequest="65"
                 Clicked="btnAgregarContacto_Clicked"
-                Margin="8"
-                TranslationX="130"
                 >
-            </Button>
-            <Button
+        </Button>
+        <Button
                 x:Name="btnFavoritos"
                 Text="*"
                 FontAttributes="Bold"
@@ -88,9 +83,8 @@
                 TextColor="White"
                 HeightRequest="65"
                 WidthRequest="65"
-                TranslationX="130"
                 >
-            </Button>
+        </Button>
         </HorizontalStackLayout>
-    </Grid>
+    </FlexLayout>
 </ContentPage>
