--- a/Views/AgregarEditarContacto.xaml
+++ b/Views/AgregarEditarContacto.xaml
@@ -8,25 +8,26 @@
     <VerticalStackLayout>
         <Button
                 
-                Text="←"
+                Text="Atras"
+                Margin="0,10,270,-55"
                 FontAttributes="Bold"
-                FontSize="32"
+                FontSize="10"
                 BorderColor="DarkSlateBlue" 
                 BorderWidth="3"
                 CornerRadius="20"
                 BackgroundColor="DarkSlateBlue" 
                 TextColor="White"
-                HeightRequest="65"
+                HeightRequest="35"
                 WidthRequest="65"
                 >
 
         </Button>
         <Image 
-         Margin="30,30,30,0"   
-         Source="contacto.png"
-         HeightRequest="150"
-         WidthRequest="150"
-         Aspect="AspectFill"
+            Margin="30,30,30,0"   
+            Source="contacto.png"
+            HeightRequest="150"
+            WidthRequest="150"
+            Aspect="AspectFill"
          >
         </Image>
         <Label 
@@ -39,32 +40,32 @@
         </Label>
             <Grid ColumnDefinitions="auto,*" RowDefinitions="auto,auto,auto,auto,auto,auto">
             <Image 
-             Margin="10,20,3,1"
-             Source="silueta.png"
-             HeightRequest="30"
-             WidthRequest="30"
-             Aspect="AspectFill"
-             Grid.Column="0"
+                Margin="10,20,3,1"
+                Source="silueta.png"
+                HeightRequest="30"
+                WidthRequest="30"
+                Aspect="AspectFill"
+                Grid.Column="0"
              >
             </Image>
             <Image 
-             Margin="10,-5,3,1"
-             Source="telefono.png"
-             HeightRequest="30"
-             WidthRequest="30"
-             Aspect="AspectFill"
-             Grid.Column="0"
-             Grid.Row="3"
+                Margin="10,-5,3,1"
+                Source="telefono.png"
+                HeightRequest="30"
+                WidthRequest="30"
+                Aspect="AspectFill"
+                Grid.Column="0"
+                Grid.Row="3"
              >
             </Image>
             <Image 
-             Margin="10,-5,3,1"
-             Source="sobre.png"
-             HeightRequest="30"
-             WidthRequest="30"
-             Aspect="AspectFill"
-             Grid.Column="0"
-             Grid.Row="4"
+                Margin="10,-5,3,1"
+                Source="sobre.png"
+                HeightRequest="30"
+                WidthRequest="30"
+                Aspect="AspectFill"
+                Grid.Column="0"
+                Grid.Row="4"
              >
             </Image>
 
@@ -173,6 +174,22 @@
                     </Entry>
                 </Border>
             </Border>
+            <Button
+                Grid.Column="1"
+                Grid.Row="5"
+                Text="Guardar"
+                Margin="-50,5,-20,0"
+                FontAttributes="Bold"
+                FontSize="10"
+                BorderColor="DarkSlateBlue" 
+                BorderWidth="3"
+                CornerRadius="20"
+                BackgroundColor="DarkSlateBlue" 
+                TextColor="White"
+                HeightRequest="35"
+                WidthRequest="70"
+                >
+            </Button>
         </Grid>
     </VerticalStackLayout>
 </ContentPage>
